tests/snapshots/deserializer__double_nan.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nNaN"
---
=== VALUE ===
Double(NaN)

=== HEAP ===
Heap {}

