tests/snapshots/deserializer__double_neg.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n-1.1"
---
=== VALUE ===
Double(-1.1)

=== HEAP ===
Heap {}

