tests/snapshots/deserializer__double_neg_infinity.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n-Infinity"
---
=== VALUE ===
Double(-inf)

=== HEAP ===
Heap {}

