tests/snapshots/deserializer__double_neg_zero.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n-0"
---
=== VALUE ===
Double(-0.0)

=== HEAP ===
Heap {}

