tests/snapshots/deserializer__error.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Error(\"foo\", { cause: 1 })"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Error {
        kind: Error,
        message: Some(
            OneByte("foo"),
        ),
        stack: Some(
            OneByte("Error: foo\n    at <anonymous>:1:1"),
        ),
        cause: Some(
            I32(
                1,
            ),
        ),
    },
}

