tests/snapshots/deserializer__i32.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n1"
---
=== VALUE ===
I32(1)

=== HEAP ===
Heap {}

