tests/snapshots/deserializer__i32_max.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n2147483647"
---
=== VALUE ===
I32(2147483647)

=== HEAP ===
Heap {}

