tests/snapshots/deserializer__i32_min.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n-2147483648"
---
=== VALUE ===
I32(-2147483648)

=== HEAP ===
Heap {}

