tests/snapshots/deserializer__i32_neg.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n1000"
---
=== VALUE ===
I32(1000)

=== HEAP ===
Heap {}

