tests/snapshots/deserializer__i32_zero.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n0"
---
=== VALUE ===
I32(0)

=== HEAP ===
Heap {}

